examples/type_system/failing/65_adt_nested_constructor_non_exhaustive.flx
// parity-expected-stdout-begin
// parity-expected-stdout-end
// expect: compile_error

// E083: nested constructor coverage must be complete for unary wrapper constructors.

data ResultI {
    OkI(Int),
    ErrI(Int),
}

data Wrap {
    Boxed(ResultI),
    Empty,
}

fn score(w: Wrap) -> Int {
    match w {
        Boxed(OkI(v)) -> v,
        Empty -> 0,
    }
}

fn main() {
    score(Empty)
}
